[workspace]
resolver = "2"

members = ["cli", "lib"]

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["John Allen <john@threedogconsulting.com"]
homepage = "https://github.com/johnallen3d/mp-cli"
license = "MIT/Apache-2.0"
repository = "https://github.com/johnallen3d/mp-cli.git"

[workspace.dependencies]
serde = { version = "1.0.195", features = ["derive"] }
