[package]
name = "mpd-easy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A wrapper around the `mpd` crate simplifying common tasks."
homepage.workspace = true
license.workspace = true
repository.workspace = true
autoexamples = false

[dependencies]
chrono = { version = "0.4.33", features = [] }
eyre = "0.6.11"
mpd = { version = "0.1.0", features = ["serde"] }
serde = { workspace = true }
serde_json = "1.0.113"

[dev-dependencies]
tempdir = "0.3.7"
