[package]
name = "mpd-easy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A wrapper around the `mpd` crate simplifying common tasks."
homepage.workspace = true
license.workspace = true
repository.workspace = true
autoexamples = false

[dependencies]
chrono = { version = "0.4.38", features = [] }
eyre = "0.6.12"
mpd = { version = "0.1.0", features = ["serde"] }
serde = { workspace = true }
serde_json = "1.0.125"

[dev-dependencies]
tempdir = "0.3.7"
